chore: ship openapi spec in container
